--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.10.2"
+    "mongoose": "^5.10.2",
+    "morgan": "^1.10.0"
   }
 }
