--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mongoose_skeleton",
+  "name": "nba_stats",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -18,7 +18,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.10.2",
-    "morgan": "^1.10.0"
+    "mysql": "2.18.1",
+    "sequelize": "^6.3.4"
   }
 }
