--- a/config/config.json
+++ b/config/config.json
@@ -2,14 +2,7 @@
     "development": {
         "username": "root",
             "password": "root",
-                "database": "Players_db",
-                    "host": "127.0.0.1",
-                        "dialect": "mysql"
-    },
-    "test": {
-        "username": "root",
-            "password": null,
-                "database": "database_test",
+                "database": "players",
                     "host": "127.0.0.1",
                         "dialect": "mysql"
     },
