--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "jquery": "^3.5.1",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "sequelize": "^6.3.5"
   }
