--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "express": "^4.17.1",
+    "fast-csv": "^4.3.2",
     "if-env": "^1.0.4",
     "jquery": "^3.5.1",
     "morgan": "^1.10.0",
